<resources>
    <string name="app_name">EventBuddy</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps">Venue</string>


    <string name="scheduled">Scheduled</string>
    <string name="approve">Approve</string>
    <string name="pending">Pending</string>
    <string name="selectsd">Select Speaker or Delegate</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

    <drawable name="app_icon">@drawable/app_logo</drawable>
    <drawable name="app_icon_circular">@drawable/app_icon_circular</drawable>
    <drawable name="splash_background">@drawable/app_background_image</drawable>
    <drawable name="background">@drawable/app_background_image</drawable>

    <string name="icon_heart">&#xf004;</string>
    <string name="icon_eye">&#xf06e;</string>
    <string name="icon_eye_slash">&#xf070;</string>
    <string name="select_date">Select Date</string>
    <string name="select_time_slot">Select Time Slot</string>
    <string name="username">User Name</string>
    <string name="userEmail">example@email.com</string>
    <string name="userDesignation">Android Developer</string>
    <string name="organization">Organization</string>
    <string name="forgot_screen_message">It happens. Enter your registered Email ID and check your mailbox for further instructions.</string>


</resources>
