<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/light_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <in.kestone.eventbuddy.widgets.CustomTextView
                android:id="@+id/mScheduledTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/scheduled"
                android:textColor="@color/grey"
                android:textSize="17sp"
                android:textStyle="bold" />

            <in.kestone.eventbuddy.widgets.CustomTextView
                android:id="@+id/mApproveTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/approve"
                android:textColor="@color/grey"
                android:textSize="17sp"
                android:textStyle="bold" />

            <in.kestone.eventbuddy.widgets.CustomTextView
                android:id="@+id/mPendingTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pending"
                android:textColor="@color/grey"
                android:textSize="17sp"
                android:textStyle="bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</FrameLayout>
