<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileIv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@drawable/default_user_grey"
                    app:civ_border_overlay="true"
                    app:civ_border_width=".5dp" />

                <ImageView
                    android:id="@+id/mPassIv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="Btn edit"
                    android:padding="5dp"
                    android:src="@drawable/camera_grey"
                    android:visibility="visible" />

            </RelativeLayout>

            <in.kestone.eventbuddy.widgets.CustomTextView
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/userEmail"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/grey" />

            <in.kestone.eventbuddy.widgets.CustomTextView
                android:id="@+id/uniqueIdTv"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="Unique Id"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/grey"
                android:visibility="gone" />

            <in.kestone.eventbuddy.widgets.CustomEditText
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/grey" />

            <in.kestone.eventbuddy.widgets.CustomEditText
                android:id="@+id/mobileTv"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:gravity="center"
                android:hint="Mobile No."
                android:inputType="phone"
                android:maxLength="10"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/grey" />

            <in.kestone.eventbuddy.widgets.CustomEditText
                android:id="@+id/organizationTv"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/organization"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/grey" />

            <in.kestone.eventbuddy.widgets.CustomEditText
                android:id="@+id/designationTv"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/userDesignation"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/grey" />

            <in.kestone.eventbuddy.widgets.CustomButton
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/solid_button_effect"
                android:text="Update Profile"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:theme="@style/MyCheckBox" />

                <in.kestone.eventbuddy.widgets.CustomTextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I agree"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>