<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/speakerRLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <in.kestone.eventbuddy.widgets.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selectsd"
                    android:textSize="15sp" />

                <in.kestone.eventbuddy.widgets.CustomTextView
                    android:id="@+id/typeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/nameRLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <in.kestone.eventbuddy.widgets.CustomTextView
                    android:id="@+id/labelTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select Speaker"
                    android:textSize="15sp" />

                <in.kestone.eventbuddy.widgets.CustomTextView
                    android:id="@+id/nameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <in.kestone.eventbuddy.widgets.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="When would you like to meet"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <in.kestone.eventbuddy.widgets.CustomTextView
                        android:id="@+id/tvSelectDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_5"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/select_date"
                        android:padding="@dimen/dimen_10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <in.kestone.eventbuddy.widgets.CustomTextView
                        android:id="@+id/tvSelectTimeSlot"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_5"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/select_time_slot"
                        android:padding="@dimen/dimen_10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="15dp"-->
                <!--android:orientation="horizontal">-->

                <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:orientation="horizontal">-->

                <!--<RelativeLayout-->
                <!--android:layout_width="60dp"-->
                <!--android:layout_height="60dp"-->
                <!--android:background="@color/colorPrimary">-->

                <!--<in.kestone.eventbuddy.widgets.CustomTextView-->
                <!--android:id="@+id/dayTv"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@drawable/solid_button_effect"-->
                <!--android:gravity="center"-->
                <!--android:text="Day"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="15sp" />-->


                <!--</RelativeLayout>-->

                <!--<RelativeLayout-->
                <!--android:layout_width="60dp"-->
                <!--android:layout_height="60dp"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:background="@color/colorPrimary">-->

                <!--<in.kestone.eventbuddy.widgets.CustomTextView-->
                <!--android:id="@+id/monthTv"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@drawable/solid_button_effect"-->
                <!--android:gravity="center"-->
                <!--android:text="Month"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="15sp" />-->


                <!--</RelativeLayout>-->

                <!--</LinearLayout>-->

                <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:orientation="horizontal">-->

                <!--<RelativeLayout-->
                <!--android:layout_width="60dp"-->
                <!--android:layout_height="60dp"-->
                <!--android:background="@color/colorPrimary">-->

                <!--<in.kestone.eventbuddy.widgets.CustomTextView-->
                <!--android:id="@+id/hourTv"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@drawable/solid_button_effect"-->
                <!--android:gravity="center"-->
                <!--android:text="Hrs"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="15sp" />-->


                <!--</RelativeLayout>-->

                <!--<RelativeLayout-->
                <!--android:layout_width="60dp"-->
                <!--android:layout_height="60dp"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:background="@color/colorPrimary">-->

                <!--<in.kestone.eventbuddy.widgets.CustomTextView-->
                <!--android:id="@+id/minuteTv"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@drawable/solid_button_effect"-->
                <!--android:gravity="center"-->
                <!--android:text="Min"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="15sp" />-->


                <!--</RelativeLayout>-->

                <!--</LinearLayout>-->
                <!--</RelativeLayout>-->

            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/LocationRLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <in.kestone.eventbuddy.widgets.CustomTextView
                    android:id="@+id/LocationTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select Location"
                    android:textSize="15sp" />

                <in.kestone.eventbuddy.widgets.CustomTextView
                    android:id="@+id/locationNameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/MeetingNoteRLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <in.kestone.eventbuddy.widgets.CustomTextView
                    android:id="@+id/meetingNoteTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Networking Note"
                    android:textSize="15sp" />

                <in.kestone.eventbuddy.widgets.CustomEditText
                    android:id="@+id/networkingCommentEv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:inputType="textImeMultiLine"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>



        <in.kestone.eventbuddy.widgets.CustomButton
            android:id="@+id/meetingRequestBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/solid_button_effect"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:text="Send Meeting Request"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>
